// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Invalid #1 1`] = `
"#### ⌨️ Code

      1 | query wrongName { user { id name } }

#### ❌ Error

    > 1 | query wrongName { user { id name } }
        | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Operation should follow the naming conventions, the expected name is GraphqlEslintRulesUserQuery

#### 🔧 Autofix output

      1 | query GraphqlEslintRulesUserQuery { user { id name } }"
`;

exports[`Invalid #2 1`] = `
"#### ⌨️ Code

      1 | query GraphqlEslintRulesUserQuery { user { id name } }

#### ❌ Error

    > 1 | query GraphqlEslintRulesUserQuery { user { id name } }
        | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Filename should start with the package directory name: "graphql-eslint-rules""
`;

exports[`Invalid #3 1`] = `
"#### ⌨️ Code

      1 | query GraphqlEslintRulesUserQuery { user { id name } }

#### ❌ Error

    > 1 | query GraphqlEslintRulesUserQuery { user { id name } }
        | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Filename should end with the operation name (query/mutation/subscription) e.g. foo-query.graphql"
`;
